# true-tech-hack-2024

./: .env.dev  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml  readme.md
docker/backend/: backend.dockerfile
docker/frontend/: frontend.dockerfile  nginx.conf
docker/yolo/: yolo.dockerfile
docs/: architecture.puml  db.puml
frontend/: .eslintrc.cjs  .gitignore  .prettierrc  Dockerfile  README.md  eslintrc.cjs  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/.husky/: pre-commit
frontend/src/: main.tsx
frontend/src/app/: index.tsx
frontend/src/app/providers/: withAuth.tsx  withTheme.tsx
frontend/src/app/styles/: index.css
frontend/src/features/follow-button/: index.tsx
frontend/src/features/theme-switch/: index.tsx
tests/: conftest.py
tests/api/v1/: test_monitoring.py
tests/common/events/: test_storage.py
tests/common/places/: test_storage.py
tests/common/users/: test_storage.py
tests/plugins/: db.py  factories.py
tests/plugins/factories/: events.py  places.py  users.py
tests/plugins/instances/: auth.py  events.py  places.py  rest.py  users.py
tth/: __main__.py  args.py  deps.py
tth/bot/: deps.py  handlers.py  service.py
tth/bot/commands/: help.py  start.py  ui_commands.py
tth/bot/dialogs/: router.py  states.py
tth/bot/middlewares/: deps.py  user.py
tth/bot/utils/: dialogs.py
tth/common/: args.py  constants.py  deps.py  exceptions.py  json.py  reduce_cache.py
tth/common/disabilities/: models.py  storage.py
tth/common/estimations/: estimator.py
tth/common/events/: models.py  storage.py
tth/common/features/: models.py  storage.py
tth/common/models/: pagination.py
tth/common/places/: models.py  storage.py
tth/common/telegram/: models.py  storage.py
tth/common/users/: base.py  models.py  storage.py
tth/cron/: deps.py  http_client.py  parser.py  service.py
tth/db/: __main__.py  base.py  models.py  utils.py
tth/db/migrations/: env.py
tth/rest/: deps.py  exception_handlers.py  middlewares.py  overrides.py  service.py
tth/rest/api/: router.py
tth/rest/auth/: base.py  jwt.py  models.py  passgen.py  rsa.py
tth/rest/users/: dispatcher.py
tth/yolo/: __main__.py  args.py  deps.py  recognizer.py  service.py
(+49 files in other folders)
