[tool.poetry]
name = "tth"
version = "0.1.0"
description = "True Tech Hack 2024"
authors = ["Sergey Natalenko <sergey.natalenko@mail.ru>"]
license = "MIT"
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.11"
aiomisc = {extras = ["asgi", "cron", "uvicorn", "uvloop"], version = "^17.5.4"}
aiomisc-dependency = "^0.1.20"
fastapi = "^0.110.1"
pydantic = "<2.6"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
alembic = "^1.13.1"
orjson = "^3.10.0"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
argclass = "^1.0.0"
asyncpg = "^0.29.0"
redis = "^5.0.3"
ujson = "^5.9.0"
async-reduce = "^1.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
mypy = "^1.9.0"
ruff = "^0.3.5"
pytest = "<8.0.0"
aiomisc-pytest = "^1.1.2"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.6"
factory-boy = "^3.3.0"
dirty-equals = "^0.7.1.post0"
types-ujson = "^5.9.0.0"

[tool.poetry.scripts]
migrate = "tth.db.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
python_files = "test_*"
python_functions = "test_*"
python_classes = "TestSuite*"
addopts = "-p no:cacheprovider"

[tool.coverage.run]
branch = true
source = ["tth"]
command_line = "-m pytest"

[tool.coverage.report]
show_missing = true

[tool.coverage.xml]
output = "coverage.xml"

[tool.ruff]
line-length = 88
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
]
indent-width = 4
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
    "BLE",
    "C90",
    "E",
    "F",
    "G",
    "I",
    "ICN",
    "ISC",
    "PLE",
    "Q",
    "RUF006",
    "RUF100",
    "T10",
    "T20",
    "TID",
    "UP",
    "W",
]
ignore = ["ISC001"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["tth", "tests"]

[tool.mypy]
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = false
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
    "aiomisc_dependency.*",
    "argclass.*",
    "async_reduce.*",
]
ignore_missing_imports = true